hphp/hack/test/typecheck/array/disallow_hetergeneous_inputs_for_darray.php
<?hh

function test(): void {
  varray["tingley", "meijer" => 0];
}
